--- a/index.html
+++ b/index.html
@@ -139,6 +139,15 @@
         <h2>ELASTIC BEANSTALK</h2>
         <p>Leaking Beanstalk and Access Key Creation</p>
       </a>
+      <a
+        class="card"
+        href="writeup.html?url=https://storm-albacore-43d.notion.site/ebd/1ffd83dfa89f80dbb6b0cc878f35500d"
+        target="_self"
+      >
+        <h2>POLICY ROLLBACK</h2>
+        <p>Escalation to admin privilege by changing the more permissive policy version </p>
+      </a>
+      
     </main>
 
     <footer>
