--- a/index.html
+++ b/index.html
@@ -147,6 +147,15 @@
         <h2>POLICY ROLLBACK</h2>
         <p>Escalation to admin privilege by changing the more permissive policy version </p>
       </a>
+
+      <a
+        class="card"
+        href="writeup.html?url=https://storm-albacore-43d.notion.site/ebd/1ffd83dfa89f80688fa7c71b55d879c"
+        target="_self"
+      >
+        <h2>LAMBDA ESCALTION </h2>
+        <p>Escalation to admin privilege by passing a high privilage role to lambda and then attach admin policy to our low privilage user </p>
+      </a>
       
     </main>
 
