--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     <main class="card-container">
       <a
         class="card"
-        href="writeup.html?url=https://storm-albacore-43d.notion.site/ebd/1fed83dfa89f80c29547ed61ee682085"
+        href="writeup.html?url=https://exido-rio.notion.site/ebd/1fed83dfa89f80c29547ed61ee682085"
         target="_self"
       >
         <h2>IAM Privesc Key Rotation</h2>
@@ -124,7 +124,7 @@
 
       <a
         class="card"
-        href="writeup.html?url=https://storm-albacore-43d.notion.site/ebd/1fdd83dfa89f80549083f1c0ae46970a"
+        href="writeup.html?url=https://exido-rio.notion.site/ebd/1fdd83dfa89f80549083f1c0ae46970a"
         target="_self"
       >
         <h2>SNS SECRET</h2>
@@ -133,7 +133,7 @@
 
       <a
         class="card"
-        href="writeup.html?url=https://storm-albacore-43d.notion.site/ebd/1fcd83dfa89f801997b0c49396ec1bea"
+        href="writeup.html?url=https://exido-rio.notion.site/ebd/1fcd83dfa89f801997b0c49396ec1bea"
         target="_self"
       >
         <h2>ELASTIC BEANSTALK</h2>
@@ -141,7 +141,7 @@
       </a>
       <a
         class="card"
-        href="writeup.html?url=https://storm-albacore-43d.notion.site/ebd/1ffd83dfa89f80dbb6b0cc878f35500d"
+        href="writeup.html?url=https://exido-rio.notion.site/ebd/1ffd83dfa89f80dbb6b0cc878f35500d"
         target="_self"
       >
         <h2>POLICY ROLLBACK</h2>
@@ -150,7 +150,7 @@
 
       <a
         class="card"
-        href="writeup.html?url=https://storm-albacore-43d.notion.site/ebd/1ffd83dfa89f80688fa7c71b55d879c8"
+        href="writeup.html?url=https://exido-rio.notion.site/ebd/1ffd83dfa89f80688fa7c71b55d879c8"
         target="_self"
       >
         <h2>LAMBDA ESCALTION </h2>
