--- a/index.html
+++ b/index.html
@@ -156,6 +156,16 @@
         <h2>LAMBDA ESCALTION </h2>
         <p>Escalation to admin privilege by passing a high privilage role to lambda and then attach admin policy to our low privilage user </p>
       </a>
+
+      <a
+        class="card"
+        href="writeup.html?url=https://exido-rio.notion.site/ebd/226d83dfa89f8051a2dcf11deb519d59"
+        target="_self"
+      >
+        <h2> SQS FLAG SHOP </h2>
+        <p> Abusing Invalidation and directly interact with the SQS queue and bypassing the frontend restrictions </p>
+      </a>
+      
       
     </main>
 
